// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default secret behavior 1`] = `
{
  "SecretA720EF05": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "GenerateSecretString": {},
    },
    "Type": "AWS::SecretsManager::Secret",
    "UpdateReplacePolicy": "Delete",
  },
}
`;

exports[`secret with a name 1`] = `
{
  "SecretA720EF05": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "GenerateSecretString": {},
      "Name": "my-secret",
    },
    "Type": "AWS::SecretsManager::Secret",
    "UpdateReplacePolicy": "Delete",
  },
}
`;
